# nexent

./: .coveragerc  .dockerignore  .gitignore  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  DEVELOPPER_NOTE.md  DEVELOPPER_NOTE_CN.md  FAQ.md  FAQ_CN.md  LICENSE  MAINTENANCE.md  NOTICE  Project_Structure.md  Project_Structure_CN.md  README.md  README_CN.md  README_EN.md  SECURITY.md  demo.py
.cursor/rules/: english_comments.mdc  environment_variable.mdc
.devcontainer/: README.md  devcontainer.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_cn.yml  document_issue.yml  (+4 more)
backend/: .gitignore  data_process_service.py  main_service.py  mcp_service.py  nexent_mcp_service.py  pyproject.toml  requirements.txt
backend/agents/: README.md  agent_create_factory.py  agent_run_manager.py  build_agent_run_info.py  create_agent_info.py  manager_agent_demo.json  preprocess_manager.py  search_agent.json  search_agent_with_mail.json
backend/agents/default_agents/: agent_search_agent_config.json
backend/apps/: README.md  README_CN.md  agent_app.py  base_app.py  config_sync_app.py  conversation_management_app.py  data_process_app.py  elasticsearch_app.py  file_management_app.py  image_app.py  knowledge_app.py  knowledge_summary_app.py  me_model_managment_app.py  mem0_config.py  memory_config_app.py  mock_user_management_app.py  model_managment_app.py  prompt_app.py  proxy_app.py  remote_mcp_app.py  tenant_config_app.py  tool_config_app.py  user_management_app.py  voice_app.py
backend/consts/: const.py  model.py  provider.py
backend/consts/agents/: manager_agent_demo.json  search_agent.json
backend/data_process/: __init__.py  app.py  config.py  ray_actors.py  ray_config.py  tasks.py  utils.py  worker.py
backend/database/: __init__.py  agent_db.py  attachment_db.py  client.py  conversation_db.py  db_models.py  knowledge_db.py  memory_config_db.py  model_management_db.py  remote_mcp_db.py  tenant_config_db.py  user_tenant_db.py  utils.py
backend/mcp_service/: README.md  common_function.py  local_mcp_service.py  remote_mcp_service_manager.py
backend/mcp_service/langchain/: compute_tool.py  multiply_tool.py
backend/prompts/: README.md  analyze_file.yaml  analyze_file_en.yaml  code_agent.yaml  code_agent_with_email.yaml  knowledge_summary_agent.yaml  knowledge_summary_agent_en.yaml  knowledge_summery_agent.yaml  managed_agent_template.yaml  managed_system_prompt_template.yaml  managed_system_prompt_template_en.yaml  manager_agent.yaml  manager_system_prompt_template.yaml  manager_system_prompt_template_en.yaml  search_agent.yaml  search_agent_with_mail.yaml
backend/prompts/utils/: generate_title.yaml  generate_title_en.yaml  prompt_fine_tune.yaml  prompt_fine_tune_en.yaml  prompt_generate.yaml  prompt_generate_en.yaml
backend/services/: __init__.py  agent_service.py  conversation_management_service.py  data_process_service.py  elasticsearch_service.py  file_management_service.py  knowledge_summary_service.py  memory_config_service.py  model_health_service.py  model_provider_service.py  prompt_service.py  redis_service.py  remote_mcp_service.py  tenant_config_service.py  test.py  tool_configuration_service.py
backend/sql/: 0619_model_record_t.sql
backend/tool_collection/langchain/: compute_tool.py
backend/tool_collection/mcp/: README_CN.md
backend/tool_collections/langchain/: README.md
backend/utils/: agent_create_factory.py  agent_utils.py  attachment_utils.py  auth_utils.py  config_utils.py  conversation_management_utils.py  elasticsearch_utils.py  file_management_utils.py  image_utils.py  langchain_utils.py  logging_utils.py  memory_utils.py  model_name_utils.py  prompt_template_utils.py  prompt_utils.py  str_utils.py  task_status_utils.py  thread_utils.py  user_utils.py
doc/: package-lock.json
docker/: .env  .env.beta  .env.example  .env.general  .env.mainland  deploy.sh  docker-compose-supabase.prod.yml  docker-compose-supabase.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  generate_env.sh  init.sql  openssh-install-script.sh  prepare.sh  uninstall.sh
docs/: tools_naming_convention.md
frontend/: .gitignore  README.md  build.sh  deploy.sh  middleware.ts  next.config.mjs  package.json  server.js  tsconfig.json
make/: Dockerfile  MAKE.md  README.md  start.sh
sdk/: README.md  README_EN.md  pyproject.toml
sdk/nexent/: __init__.py
sdk/nexent/core/: __init__.py
sdk/nexent/core/agents/: __init__.py  agent_const.py  agent_create_factory.py  agent_model.py  code_agent.py  core_agent.py  nexent_agent.py  run_agent.py
sdk/nexent/core/models/: README.md  __init__.py  embedding_model.py  openai_deep_thinking_llm.py  openai_llm.py  openai_long_context_model.py  openai_vlm.py  stt_model.py  tts_model.py
sdk/nexent/core/nlp/: __init__.py  stopwords.py  tokenizer.py
sdk/nexent/core/prompts/: code_agent.yaml  title_generator.yaml
sdk/nexent/core/tools/: README.md  README_EN.md  __init__.py  bocha_search_tool.py  create_directory_tool.py  create_file_tool.py  delete_directory_tool.py  delete_file_tool.py  exa_search_tool.py  get_email_tool.py  knowledge_base_search_tool.py  linkup_search_tool.py  list_directory_tool.py  move_item_tool.py  read_file_tool.py  search_tool.py  send_email_tool.py  summary_tool.py  tavily_search_tool.py  terminal_tool.py
sdk/nexent/core/utils/: __init__.py  agent_utils.py  favicon_extractor.py  image_filter.py  observer.py  title_generator.py  tools_common_message.py
sdk/nexent/data_process/: README.md  __init__.py  async_task_manager.py  base.py  core.py  excel_file_process.py  excel_process.py  generic_file_process.py  openpyxl_processor.py  process_worker_pool.py  task_store.py  unstructured_processor.py
sdk/nexent/memory/: embedder_adaptor.py  memory_core.py  memory_service.py  memory_utils.py
sdk/nexent/vector_database/: README.md  elasticsearch_core.py  utils.py
test/: .coveragerc  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt  run_all_test.py  run_all_tests.py  test_agent_create_and_run.py  workflow_test.py
(+394 files in other folders)
