[project]
name = "backend"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "uvicorn>=0.34.0",
    "fastapi>=0.115.12",
    "aiohttp>=3.8.0",
    "psycopg2-binary==2.9.10",
    "sqlalchemy~=2.0.37",
    "websocket-client>=1.8.0",
    "pyyaml>=6.0.2",
    "redis>=5.0.0",
    "celery>=5.3.6",
    "nexent"
]

[project.optional-dependencies]
data-process = [
    "ray[default]>=2.9.3",
    "flower>=2.0.1",
    "nest_asyncio>=1.5.6",
    "unstructured[all-docs]"
]

[tool.uv.sources]
nexent = { path = "../sdk", package = true }

[tool.setuptools]
packages = []
